# GEO3Py

./: .gitignore  GEO3.txt  GEO3toPyConverter.py  LICENSE  NewGEO3Funcs.py  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: buildDocs.yml  python-package.yml  python-publish.yml
GEO3-Maple/: GEO3toPyConverter.py
GEO3-Maple/functions/: Analysis.py  Area.py  Base2d.py  Base3d.py  Base3dFix.py  Base3dFixAll.py  Base3dRot.py  EFG.py  FI.py  FII.py  FIcosang.py  FIdot.py  FInrm.py  FSb.py  FSbTrunc.py  FSn.py  FSnTrunc.py  FSt.py  FStTrunc.py  GaussC.py  Gitter.py  H.py  Hinge.py  HingeAnalysis.py  Jac.py  JacSigned.py  K.py  LMN.py  Length.py  Metric.py  MetricMat.py  RotX.py  RotY.py  RotZ.py  RotationFactors.py  Rx.py  Ry.py  Rz.py  SVD2D.py  SVD3D.py  (+45 more)
docs/: PDF-Conversion.md
docs/source/: PDF-Conversion.md  PDF-Conversion.rst  conf.py  examples.rst  geo3py.plots.rst  geo3py.rst  guide.rst  index.rst  install.rst  modules.rst
docs/source/notebooks/: SurfaceArea.ipynb
docs/source/notebooks/E22/: E22-Differentialgeometri.ipynb
docs/source/notebooks/Hjemmeopgave-5/: Hjemmeopgave-5.ipynb
docs/source/notebooks/Hjemmeopgave-6/: Hjemmeopgave-6.ipynb
examples/: SurfaceArea.ipynb
functions/: Analysis.py  Area.py  Base2d.py  Base3d.py  Base3dFix.py  Base3dFixAll.py  Base3dRot.py  EFG.py  FI.py  FII.py  FIcosang.py  FIdot.py  FInrm.py  FSb.py  FSbTrunc.py  FSn.py  FSnTrunc.py  FSt.py  FStTrunc.py  GaussC.py  Gitter.py  H.py  Hinge.py  HingeAnalysis.py  Jac.py  JacSigned.py  K.py  LMN.py  Length.py  Metric.py  MetricMat.py  RotX.py  RotY.py  RotZ.py  RotationFactors.py  Rx.py  Ry.py  Rz.py  SVD2D.py  SVD3D.py  (+46 more)
src/: test3.py
src/GEO3Py/: __init__.py  core.py  surface.py  utils.py
src/GEO3Py/plots/: __init__.py  plot.py
src/geo3py/: 3DMatrix.py  __init__.py  basistrekant.py  core.py  curve.py  functions.py  matrix2D.py  matrix3D.py  solid.py  surface.py  tetraeder.py  tetraedre.py  utils.py
src/geo3py/plots/: __init__.py  plot.py
src/geo3py_/: solid.py  surface.py
tests/: test.py  test_exam_E11.py  test_exam_E21.py  test_sphere.py  test_torus.py
