[metadata]
name = geo3py
version = 0.0.1
author = Kaare G. S. Hansen
author_email = s214282@student.dtu.dk
description = Library for use in DTU course Differential geometry and Parametric design - 01237
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KaareZ/GEO3Py
project_urls =
    Bug Tracker = https://github.com/KaareZ/GEO3Py
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src